--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
+    "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.4.0",
     "@mui/x-data-grid": "^5.5.1",
     "@reduxjs/toolkit": "^1.7.2",
@@ -48,8 +49,8 @@
     "file-loader": "^6.2.0",
     "nodemon": "^1.19.4",
     "react": "^17.0.2",
-    "react-hook-form": "^7.26.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.26.1",
     "react-redux": "^7.2.6",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
