--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
