--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^2.28.0",
     "dateformat": "^5.0.3",
     "express": "^4.16.4",
+    "firebase": "^9.6.9",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
