--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.4.0",
+    "@mui/styles": "^5.5.1",
     "@mui/x-data-grid": "^5.5.1",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.21.1",
@@ -38,6 +39,7 @@
     "firebase": "^9.6.9",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
+    "mui": "^0.0.1",
     "pg": "^8.5.1",
     "react-number-format": "^4.9.1",
     "react-router-dom": "^6.2.1",
