--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "dateformat": "^5.0.3",
+    "dotenv": "^16.0.0",
     "express": "^4.16.4",
     "firebase": "^9.6.9",
     "jsonwebtoken": "^8.5.1",
