--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "FSA 2110 Team #1 - Capstone - Grapple",
   "main": "index.js",
-  
   "scripts": {
     "build": "webpack",
     "build:dev": "npm run build -- --watch --mode=development",
@@ -25,6 +24,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/utils": "^4.11.2",
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.4.0",
@@ -33,6 +33,7 @@
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "chart.js": "^3.7.1",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "dateformat": "^5.0.3",
@@ -42,6 +43,7 @@
     "morgan": "^1.9.1",
     "mui": "^0.0.1",
     "pg": "^8.5.1",
+    "react-chartjs-2": "^4.0.1",
     "react-number-format": "^4.9.1",
     "react-router-dom": "^6.2.1",
     "sequelize": "^6.3.5"
