--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mui": "^0.0.1",
+    
     "pg": "^8.5.1",
     "react-chartjs-2": "^4.0.1",
+    "react-facebook-login": "^4.1.1",
     "react-number-format": "^4.9.1",
     "react-router-dom": "^6.2.1",
     "sequelize": "^6.3.5"
@@ -69,6 +71,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "webpack": "^5.15.0",
-    "webpack-cli": "^4.3.1"
+    "webpack-cli": "^4.3.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
