--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mui": "^0.0.1",
-    
     "pg": "^8.5.1",
+    "react-calendar": "^3.7.0",
     "react-chartjs-2": "^4.0.1",
     "react-facebook-login": "^4.1.1",
     "react-number-format": "^4.9.1",
