--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express": "^4.16.4",
     "firebase": "^9.6.9",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "morgan": "^1.9.1",
     "mui": "^0.0.1",
     "pg": "^8.5.1",
