--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-intl": "^5.24.8",
     "react-number-format": "^4.9.1",
     "react-router-dom": "^6.2.1",
+    "react-share": "^4.4.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
